TestAutoscaling/kangooweb-with-lb.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kangooweb
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: kangooweb
    spec:
      containers:
      - name: kangooweb
        image: kangooroo.azurecr.io/kangoogoweb-linux:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kangooweb-test
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: kangooweb
