TestAutoscaling/kangooweb-with-ingress.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kangooweb-deployment
  namespace: aks-hackaton-paris
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: kangooweb
    spec:
      containers:
      - name: kangooweb
        image: kangooroo.azurecr.io/kangoogoweb-linux:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kangooweb-svc
  namespace: aks-hackaton-paris
spec:
  type: NodePort
  selector:
    app: kangooweb
  ports:
  - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kangooweb-ingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: www.aks.kangooroo.red
    http:
      paths:      
      - path: /
        backend:
          serviceName: kangooweb-svc
          servicePort: 80
